fix size collapse elem after container width change

--- a/src/app/order/pages/order-form/order-form.component.scss
+++ b/src/app/order/pages/order-form/order-form.component.scss
@@ -87,6 +87,10 @@ mat-card {
   height: 2.5rem;
 }
 
+::ng-deep .mat-expansion-panel-content {
+  flex: 1;
+}
+
 .productExpansionBody {
   display: flex;
   flex: 1;
